# memcrab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md
.github/workflows/: build_and_test.yml  check.yml  clippy.yml  doc.yml  fmt.yml  safety.yml  test.yml
examples/protogen/: .gitignore  Cargo.toml  Makefile.toml  README.md
examples/protogen/proto/: cache_grpc.proto  grpc.proto
examples/protogen/src/: main.rs
memcrab/: Cargo.toml  README.md
memcrab-cache/: Cargo.toml
memcrab-cache/src/: lib.rs
memcrab-cache/src/mem_lru/: builder.rs  bytesized.rs  container.rs  mod.rs
memcrab-cache/tests/: memlru.rs
memcrab-cli/: Cargo.toml  README.md
memcrab-cli/src/: main.rs
memcrab-protocol/: Cargo.toml  README.md
memcrab-protocol/src/: alias.rs  channel.rs  err.rs  io.rs  kind.rs  lib.rs  message.rs  msg.rs  parser.rs  sizes.rs  socket.rs  stream_reader.rs  tokens.rs  version.rs
memcrab-protocol/src/io/: async_reader.rs  async_writer.rs  mod.rs
memcrab-protocol/src/mapping/: alias.rs  flags.rs  mod.rs  sizes.rs  tokens.rs
memcrab-protocol/src/parser/: client.rs  err.rs  mod.rs  schemas.rs  server.rs
memcrab-protocol/src/parsing/: client.rs  err.rs  flags.rs  mod.rs  parser.rs  server.rs  tokens.rs
memcrab-protocol/src/socket/: client.rs  mod.rs  server.rs
memcrab-protocol/src/transport/: client.rs  mod.rs  schemas.rs  server.rs
memcrab-protocol/tests/: test_cmd.rs  utils.rs
memcrab-server/: Cargo.toml  README.md
memcrab-server/examples/: start.rs
memcrab-server/src/: lib.rs  pb.rs  service.rs
memcrab-server/src/cache/: cfg.rs  map.rs  mem_lru.rs  mod.rs  value.rs
memcrab-server/src/cache/api/: mod.rs  value.rs
memcrab-server/src/cache/memlru/: mod.rs
memcrab-server/src/serve/: err.rs  listener.rs  mod.rs  server.rs  socket.rs
memcrab-server/tests/: run.rs
memcrab/src/: connections.rs  lib.rs  pb.rs  raw_client.rs
memcrab/src/connections/: mod.rs  tcp.rs  unix.rs
memcrab/tests/: raw_client.rs  readme.rs  run.rs  tonic.rs
