[workspace]
resolver = "2"

members = [
    "memcrab",
    "memcrab-cache",
    "memcrab-server",
    "memcrab-protocol",
    "memcrab-cli",
]
exclude = ["examples"]

[workspace.dependencies]
anyhow = "1.0.79"
prost = "0.12.3"
thiserror = "1.0.56"
tonic = "0.10.2"
tokio = { version = "1.35.1", default-features = false }
