[package]
name = "memcrab-cli"
version = "0.1.0"
edition = "2021"

description = """
Command line interface for Memcrab.
"""
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/cospectrum/memcrab"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.12", features = ["derive"] }
memcrab = { version = "0.1.0", path = "../memcrab" }
memcrab-cache = { version = "0.1.0", path = "../memcrab-cache" }
memcrab-server = { version = "0.1.0", path = "../memcrab-server" }
rustyline = "13.0.0"
tokio = { version = "1.35.1", features = ["full"] }
tonic.workspace = true
