[package]
name = "memcrab-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { version = "0.12.0", default-features = false }
num_enum = "0.7.2"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-test.workspace = true
