[package]
name = "memcrab-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcrab-cache = { version = "0.1.0", path = "../memcrab-cache" }
prost = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
