[package]
name = "memcrab-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
memcrab-protocol = { version = "0.1.0", path = "../memcrab-protocol" }
lru = { version = "0.12.1" }
thiserror.workspace = true
typed-builder = "0.18.1"
async-trait = "0.1.77"
tracing = { version = "0.1.40", default-features = false }

[dev-dependencies]
tracing-subscriber = "0.3"
