[package]
name = "memcrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = """
Memory-caching system.
"""
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/cospectrum/memcrab"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
